docs/pages/versions/v58.0.0/sdk/ui/swift-ui/securefield.mdx
---
title: SecureField
description: A SwiftUI SecureField component for password input.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-58/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI SecureField matches the official SwiftUI [SecureField API](https://developer.apple.com/documentation/swiftui/securefield) and provides a text field that masks user input for passwords and other sensitive text.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/securefield/ios-light.webp"
  darkSrc="/static/images/expo-ui/securefield/ios-dark.webp"
  alt="Three SecureField rows for changing a password"
/>

## Installation

<APIInstallSection />

## Usage

### Basic secure field

<ComponentExample
  title="BasicSecureFieldExample.tsx"
  src="/static/images/expo-ui/examples/securefield-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/securefield-basic-ios-dark.webp"
  alt="An empty secure field showing the placeholder Password">

```tsx
import { useState } from 'react';
import { Host, SecureField } from '@expo/ui/swift-ui';

export default function BasicSecureFieldExample() {
  const [password, setPassword] = useState('');

  // A secure field stretches to the width it is given, so give the host a size.
  return (
    <Host style={{ flex: 1 }}>
      <SecureField
        placeholder="Password"
        onTextChange={setPassword}
      />
    </Host>
  );
}
```

</ComponentExample>

### Submit handling

Use the [`submitLabel`](modifiers/#submitlabelsubmitlabel) and [`onSubmit`](modifiers/#onsubmithandler) modifiers to handle form submission from the keyboard.

<ComponentExample
  title="SecureFieldSubmitExample.tsx"
  src="/static/images/expo-ui/examples/securefield-submit-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/securefield-submit-ios-dark.webp"
  alt="A focused secure field above the keyboard, whose submit key shows the done checkmark">

```tsx
import { useState } from 'react';
import { Host, SecureField } from '@expo/ui/swift-ui';
import { submitLabel, onSubmit } from '@expo/ui/swift-ui/modifiers';

export default function SecureFieldSubmitExample() {
  const [password, setPassword] = useState('');

  return (
    <Host style={{ flex: 1 }}>
      <SecureField
        placeholder="Password"
        onTextChange={setPassword}
        modifiers={[
          submitLabel('done'),
          onSubmit(() => console.log('Login submitted')),
        ]}
      />
    </Host>
  );
}
```

</ComponentExample>

### Imperative ref

Use a ref to imperatively set text, focus, or blur the secure field.

<ComponentExample
  title="ImperativeSecureFieldExample.tsx"
  src="/static/images/expo-ui/examples/securefield-imperative-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/securefield-imperative-ios-dark.webp"
  alt="A secure field above a row of Focus, Blur, and Set text buttons">

```tsx
import { useRef } from 'react';
import {
  Host,
  SecureField,
  SecureFieldRef,
  Button,
  HStack,
  VStack,
} from '@expo/ui/swift-ui';
import { buttonStyle } from '@expo/ui/swift-ui/modifiers';

export default function ImperativeSecureFieldExample() {
  const ref = useRef<SecureFieldRef>(null);

  return (
    <Host style={{ flex: 1 }}>
      <VStack>
        <SecureField ref={ref} placeholder="Password" />
        <HStack spacing={12}>
          <Button
            modifiers={[buttonStyle('bordered')]}
            onPress={() => ref.current?.focus()}
            label="Focus"
          />
          <Button
            modifiers={[buttonStyle('bordered')]}
            onPress={() => ref.current?.blur()}
            label="Blur"
          />
          <Button
            modifiers={[buttonStyle('bordered')]}
            onPress={() => ref.current?.setText('secret123')}
            label="Set text"
          />
        </HStack>
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { SecureField } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/securefield"
  apiName="SecureField"
/>
